                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 15-07-2005 fixed: progress dialog can be closes via back even if the operation is not canceled
 - 15-07-2005 changed: autodetect ping interval now shows secs in the spin control
 - 15-07-2005 fixed: if the number keys on the remote have global mapped actions no numbers can be entered in numeric dialog
 - 14-07-2005 changed: dvdplayer loads dlls using the sectionloader (no more unloading and loading of dlls all the time)
 - 14-07-2005 fixed: some more menu issues in the dvdplayer
 - 14-07-2005 fixed: some pts handling in the dvdplayer
 - 14-07-2005 fixed: a problem in the dvdplayer where opening a file with unknown codec resulted in a crash (and a memleak)
 - 14-07-2005 fixed: memleak in RAM control
 - 14-07-2005 fixed: memleak in RSS control
 - 14-07-2005 updated: Korean language file (Thnx to AkoXko)
 - 14-07-2005 updated: Italian language file (Thnx to kotix)
 - 14-07-2005 updated: Dutch language file (Thnx to tijmengozer)
 - 14-07-2005 updated: German language file
 - 14-07-2005 updated: German (Austrian) language file (Thnx to CEOMR)
 - 14-07-2005 updated: Finnish language file (Thnx to jutski)
 - 14-07-2005 updated: Norwegian language file (Thnx to vnm)
 - 14-07-2005 updated: Chinese (Simple) language file (Thnx to hibaby)
 - 14-07-2005 fixed: dvdplayer, playing a vob file resulted in a crash with the new ffmpeg
 - 14-07-2005 added: dvdplayer, extra audio stream information in OSD
 - 14-07-2005 fixed: dvdplayer, no audio streams are reported when playing an avi file
 - 14-07-2005 fixed: Constant hdd access in weather.